# MetaphorMacosAudioFix

./: .gitignore  CMakeLists.txt  LICENSE  MetaphorAudioFix.ini  README.md  build-windows.sh
.github/workflows/: release.yml
docs/: WINE_SPATIAL_AUDIO_NOTES.md
scripts/: package-release.sh
src/: config.cpp  config.hpp  dllmain.cpp  log.cpp  log.hpp  stdafx.h
tests/: smoke_xaudio2.cpp
